<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_margin">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@string/fontFamily"
        android:textSize="@dimen/textSizeTitle"
        tools:text="@string/news_title" />

    <TextView
        android:id="@+id/section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/news_section" />

    <TextView
        android:id="@+id/author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        tools:text="@string/news_author" />

    <TextView
        android:id="@+id/published_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        tools:text="@string/news_date" />

</LinearLayout>